[package]
name = "rusty-machine"
version = "0.4.3"
authors = ["AtheMathmo"]

description = "A machine learning library."
repository = "https://github.com/AtheMathmo/rusty-machine"
documentation = "https://AtheMathmo.github.io/rusty-machine/"
keywords = ["machine","learning","stats","data","machine-learning"]
readme = "README.md"
license = "MIT"

[features]
stats = []

[dependencies]
num = { version = "0.1.34", default-features = false }
rand = "0.3.14"
rulinalg = "0.2.1"
