[package]
name = "rusty-machine"
version = "0.5.4"
authors = ["AtheMathmo"]

description = "A machine learning library."
repository = "https://github.com/AtheMathmo/rusty-machine"
documentation = "https://AtheMathmo.github.io/rusty-machine/"
keywords = ["machine","learning","stats","data","machine-learning"]
categories = ["science"]
readme = "README.md"
license = "MIT"

[features]
stats = []
datasets = []

[dependencies]
num = { version = "0.1.41", default-features = false }
rand = "0.7.3"
rulinalg = { git = "https://github.com/AtheMathmo/rulinalg", rev = "1ed8b937" }
