[package]
name = "rusty-machine"
version = "0.1.0"
authors = ["AtheMathmo"]

description = "A machine learning library."
repository = "https://github.com/AtheMathmo/rusty-machine"
documentation = "https://AtheMathmo.github.io/rusty-machine/"
keywords = ["machine","learning","stats","statistics","algebra"]
readme = "../README.md"
license = "MIT"


[dependencies]
num = {version = "0.1.28", default-features = false }
rand = "0.3.*"

