[package]
name = "rusty-machine"
version = "0.1.2"
authors = ["AtheMathmo"]

description = "A machine learning library."
repository = "https://github.com/AtheMathmo/rusty-machine"
documentation = "https://AtheMathmo.github.io/rusty-machine/"
keywords = ["machine","learning","stats","statistics","algebra"]
readme = "../README.md"
license = "MIT"


[dependencies]
num = {version = "0.1.*", default-features = false }
rand = "0.3.*"

